Added Notebook Markdowns

--- a/RQ1.ipynb
+++ b/RQ1.ipynb
@@ -1,19 +1,31 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "b45d741b",
+   "cell_type": "markdown",
+   "id": "aa4c5f7b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "imported modules\n"
-     ]
-    }
-   ],
+   "source": [
+    "# Forschungsfrage 1 \n",
+    "Im Folgendem wird die Forschungsfrage 1 behandelt.\n",
+    "\n",
+    "\tWelche Themen werden in Bezug auf das Thema Machine Learning diskutiert?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40dc9c4c",
+   "metadata": {},
+   "source": [
+    "# Importieren der Module\n",
+    "In der folgenden Zelle werden die benötigten Module, wie zum Beispiel Spacy und scikit-learn importiert."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5dd30b1d",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "os.environ[\"KMP_DUPLICATE_LIB_OK\"]=\"TRUE\"\n",
@@ -37,9 +49,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c33cad4d",
+   "metadata": {},
+   "source": [
+    "Die Konfiguration der unteren Zelle dient der Auswahl der Datensätze. Um alle Datensätze zu erfassen ist start_post = 0 und end_post = 42637 zu setzen"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "94247b70",
+   "id": "6c0751d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +69,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4a428751",
+   "metadata": {},
+   "source": [
+    "# Datensätze laden\n",
+    "Als nächstes müssen die Datensätze aus der exportierten CSV-Datei geladen werden."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "85227b29",
+   "id": "401bf781",
    "metadata": {},
    "outputs": [
     {
@@ -72,9 +101,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b70ed863",
+   "metadata": {},
+   "source": [
+    "# Hilfsfunktionen\n",
+    "In den folgenden drei Zellen sind verschiedene Hilfsfunktionen abgebildet. Diese werden für das Bereinigen und Filtern der Datensätze benötigt, aber auch für die Verwendung des Tf-Idf-Vectorizers und das Auswählen relavanter Wörter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a4e6336",
+   "metadata": {},
+   "source": [
+    "Die clean_bodys Funktion bereinigt die Daten anhand eines Regex-Patterns und filtert beispielsweise HTML-Tags heraus.\n",
+    "Die filter_spans Funktion filtert Wortüberlappungen, damit Wörter nicht überzählt werden."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2b295467",
+   "id": "56b3994d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,9 +138,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b55a55f5",
+   "metadata": {},
+   "source": [
+    "Die nächste Zelle zeigt drei verschiedenen Möglichkeiten, wie der Tf-Idf-Vectorizer die relevanten Wörter auswählt.\n",
+    "\n",
+    "Diese Möglichkeiten sind:\n",
+    "\n",
+    "- Auswahl der Wörter über einen Schwellenwert    \n",
+    "- Auswahl der obersten n Wörter    \n",
+    "- Auswahl der obersten n Prozent der Wörter\n",
+    "\n",
+    "Die jeweilige Funktion ist in der Funktion get_relevant_words auszuwählen."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f14b0914",
+   "id": "8a0926af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eb1ed153",
+   "id": "42e4a294",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,9 +211,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "472ea0a4",
+   "metadata": {},
+   "source": [
+    "# Analyse der Datensätze\n",
+    "Die nächste Zelle zeigt das Finden von Wortzusammensetzungen für jeden einzelnen Datensatz. Diese werden durch ein definiertes Pattern gefunden. Anschließend werden die zuvor beschriebenen Hilfsfunktionen aufgerufen."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "518599df",
+   "id": "ee1f6e5d",
    "metadata": {},
    "outputs": [
     {
@@ -214,54 +286,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "2790d383",
+   "cell_type": "markdown",
+   "id": "b17f9ac9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14847"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "bigger_than_x_counter[\"model\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "13d160e6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.2624113618628434"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "doc1 = nlp('python')\n",
-    "doc2 = nlp('pandas')\n",
-    "\n",
-    "doc1.similarity(doc2)"
+    "# Visualisierung\n",
+    "Die folgende Zelle zeigt die Visualisierung der Ergebnisse. Die Ergebnisse sind im topic_counter enthalten und bigger_than_x_counter limitiert die Ergenbnisse auf die jenigen, die eine Häufigkeit von mindestens 500 haben.\n",
+    "Anschließend werden in der Grafik nur die obersten 10 angezeigt. Ergänzend ist noch zu erwähnen, dass die Ergebnisse \"training datum\" und \"datum\" durch \"training data\" und \"data\" ersetzt werden. \"Datum\" ist in diesem Fall das Lemma von Data und wird zur besseren Verständlichkeit durch \"Data\" ersetzt."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5fc3af0e",
+   "id": "5aabfa43",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88d77d37",
+   "id": "e5489d39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09d75844",
+   "id": "5939f445",
    "metadata": {},
    "outputs": [],
    "source": []
