--- a/RQ2.ipynb
+++ b/RQ2.ipynb
@@ -1,9 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "07951b10",
+   "metadata": {},
+   "source": [
+    "# Forschungsfrage 2\n",
+    "Im Folgendem wird die Forschungsfrage 2 behandelt.\n",
+    "\n",
+    "\tWie oft werden diese Themen diskutiert?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35fe540d",
+   "metadata": {},
+   "source": [
+    "# Importieren der Module\n",
+    "In der folgenden Zelle werden die benötigten Module, wie zum Beispiel Spacy und scikit-learn importiert."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "0baf034e",
+   "execution_count": 3,
+   "id": "47df8105",
    "metadata": {},
    "outputs": [
     {
@@ -37,9 +57,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c1020d58",
+   "metadata": {},
+   "source": [
+    "Die Konfiguration der unteren Zelle dient der Auswahl der Datensätze. Um alle Datensätze zu erfassen ist start_post = 0 und end_post = 42637 zu setzen"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "83857a7f",
+   "execution_count": 4,
+   "id": "d1bf29e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +77,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6cb46c53",
+   "metadata": {},
+   "source": [
+    "# Datensätze laden\n",
+    "Als nächstes müssen die Datensätze aus der exportierten CSV-Datei geladen werden."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c7c56e71",
+   "execution_count": 5,
+   "id": "9a8cc73b",
    "metadata": {},
    "outputs": [
     {
@@ -72,9 +109,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aabe5542",
+   "metadata": {},
+   "source": [
+    "# Hilfsfunktionen\n",
+    "In den folgenden drei Zellen sind verschiedene Hilfsfunktionen abgebildet. Diese werden für das Erhalten des Jahres/Quartals und Bereinigen und Filtern der Datensätze benötigt, aber auch für die Verwendung des Tf-Idf-Vectorizers und das Auswählen relavanter Wörter.\n",
+    "\n",
+    "Die clean_bodys Funktion bereinigt die Daten anhand eines Regex-Patterns und filtert beispielsweise HTML-Tags heraus. Die filter_spans Funktion filtert Wortüberlappungen, damit Wörter nicht überzählt werden."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a9f9b574",
+   "execution_count": 6,
+   "id": "6a7570b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,9 +145,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14bfd1ad",
+   "metadata": {},
+   "source": [
+    "Die nächste Zelle zeigt drei verschiedenen Möglichkeiten, wie der Tf-Idf-Vectorizer die relevanten Wörter auswählt.\n",
+    "\n",
+    "Diese Möglichkeiten sind:\n",
+    "\n",
+    "- Auswahl der Wörter über einen Schwellenwert    \n",
+    "- Auswahl der obersten n Wörter    \n",
+    "- Auswahl der obersten n Prozent der Wörter\n",
+    "\n",
+    "Die jeweilige Funktion ist in der Funktion get_relevant_words auszuwählen."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "4527eb7e",
+   "execution_count": 7,
+   "id": "d2fbf011",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,8 +188,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "7014c85f",
+   "execution_count": 8,
+   "id": "7b3caa5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,9 +217,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a23950df",
+   "metadata": {},
+   "source": [
+    "# Analyse der Datensätze\n",
+    "Die nächste Zelle zeigt das Finden von Wortzusammensetzungen für jeden einzelnen Datensatz. Diese werden durch ein definiertes Pattern gefunden. Anschließend werden die zuvor beschriebenen Hilfsfunktionen aufgerufen."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "a20a4dc0",
+   "execution_count": 9,
+   "id": "87dd5aa8",
    "metadata": {},
    "outputs": [
     {
@@ -224,9 +297,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4a7c5f54",
+   "metadata": {},
+   "source": [
+    "# Visualisierung\n",
+    "Die folgende Zelle zeigt die Visualisierung der Ergebnisse. Die Ergebnisse sind im topic_frequency_dict. Die Ergebnisse werden jeweils in einem eigenem Diagramm dargestellt."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "6565c5ad",
+   "execution_count": 10,
+   "id": "390d9ccb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,8 +324,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "1a8521ff",
+   "execution_count": 11,
+   "id": "6120df86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +340,7 @@
     "line_color = '#F48024'\n",
     "face_color = '#BCBBBB'\n",
     "\n",
-    "def draw_plot(y_values):\n",
+    "def draw_plot(y_values, topic_name):\n",
     "    fig, ax = plt.subplots(figsize=(fig_x_size,fig_y_size))\n",
     "    fig.patch.set_facecolor('#BCBBBB')\n",
     "    fig.patch.set_alpha(ax_alpha)\n",
@@ -289,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "5722e88c",
+   "id": "3ae1a1b4",
    "metadata": {},
    "outputs": [
     {
@@ -305,15 +387,16 @@
    ],
    "source": [
     "topic = \"model\"\n",
+    "topic_name = \"model\"\n",
     "\n",
     "y_values = get_y_values(topic)\n",
-    "draw_plot(y_values)\n"
+    "draw_plot(y_values, topic_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "2ae2b96a",
+   "id": "99d15e29",
    "metadata": {},
    "outputs": [
     {
@@ -329,15 +412,16 @@
    ],
    "source": [
     "topic = \"datum\"\n",
+    "topic_name = \"data\"\n",
     "\n",
     "y_values = get_y_values(topic)\n",
-    "draw_plot(y_values)"
+    "draw_plot(y_values, topic_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "85075044",
+   "id": "7a38b938",
    "metadata": {},
    "outputs": [
     {
@@ -353,15 +437,16 @@
    ],
    "source": [
     "topic = \"image\"\n",
+    "topic_name = \"image\"\n",
     "\n",
     "y_values = get_y_values(topic)\n",
-    "draw_plot(y_values)"
+    "draw_plot(y_values, topic_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "6ff268cf",
+   "id": "b2fcd0c2",
    "metadata": {},
    "outputs": [
     {
@@ -377,15 +462,16 @@
    ],
    "source": [
     "topic = \"class\"\n",
+    "topic_name = \"class\"\n",
     "\n",
     "y_values = get_y_values(topic)\n",
-    "draw_plot(y_values)"
+    "draw_plot(y_values, topic_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "e86e2b82",
+   "id": "0fe5d8b5",
    "metadata": {},
    "outputs": [
     {
@@ -401,15 +487,16 @@
    ],
    "source": [
     "topic = \"feature\"\n",
+    "topic_name = \"feature\"\n",
     "\n",
     "y_values = get_y_values(topic)\n",
-    "draw_plot(y_values)"
+    "draw_plot(y_values, topic_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "2be87533",
+   "id": "0065772a",
    "metadata": {},
    "outputs": [
     {
@@ -425,15 +512,16 @@
    ],
    "source": [
     "topic = \"layer\"\n",
+    "topic_name = \"layer\"\n",
     "\n",
     "y_values = get_y_values(topic)\n",
-    "draw_plot(y_values)"
+    "draw_plot(y_values, topic_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "21a4062d",
+   "id": "8e31708d",
    "metadata": {},
    "outputs": [
     {
@@ -449,15 +537,16 @@
    ],
    "source": [
     "topic = \"code\"\n",
+    "topic_name = \"code\"\n",
     "\n",
     "y_values = get_y_values(topic)\n",
-    "draw_plot(y_values)"
+    "draw_plot(y_values, topic_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "acf129cd",
+   "id": "2ce01970",
    "metadata": {},
    "outputs": [
     {
@@ -473,15 +562,16 @@
    ],
    "source": [
     "topic = \"error\"\n",
+    "topic_name = \"error\"\n",
     "\n",
     "y_values = get_y_values(topic)\n",
-    "draw_plot(y_values)"
+    "draw_plot(y_values, topic_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "a4427c94",
+   "id": "180340c9",
    "metadata": {},
    "outputs": [
     {
@@ -497,15 +587,16 @@
    ],
    "source": [
     "topic = \"function\"\n",
+    "topic_name = \"function\"\n",
     "\n",
     "y_values = get_y_values(topic)\n",
-    "draw_plot(y_values)"
+    "draw_plot(y_values, topic_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "9e15aa2b",
+   "id": "7585881e",
    "metadata": {},
    "outputs": [
     {
@@ -521,25 +612,10 @@
    ],
    "source": [
     "topic = \"training datum\"\n",
+    "topic_name = \"training data\"\n",
     "\n",
     "y_values = get_y_values(topic)\n",
-    "draw_plot(y_values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ced6f8f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "topic_frequency_df = pd.DataFrame.from_dict(topic_frequency_dict).transpose()\n",
-    "topic_counter = Counter()\n",
-    "\n",
-    "for year in topic_frequency_df:\n",
-    "    for quarter in topic_frequency_df[year]:\n",
-    "        topic_counter = sum((topic_counter, quarter), Counter())\n",
-    "topic_counter"
+    "draw_plot(y_values, topic_name)"
    ]
   }
  ],
