--- a/RQ3.ipynb
+++ b/RQ3.ipynb
@@ -1,9 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "164173d3",
+   "metadata": {},
+   "source": [
+    "# Forschungsfrage 3\n",
+    "\n",
+    "Im Folgendem wird die Forschungsfrage 3 behandelt.\n",
+    "\n",
+    "\tAuf welche Technologien oder Frameworks wird sich dabei bezogen?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dfc11a8",
+   "metadata": {},
+   "source": [
+    "# Importieren der Module\n",
+    "In der folgenden Zelle werden die benötigten Module, wie zum Beispiel Spacy und scikit-learn importiert."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "5a5f0971",
+   "execution_count": null,
+   "id": "f70d1359",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,21 +50,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f6cfedc5",
+   "metadata": {},
+   "source": [
+    "Die Konfiguration der unteren Zelle dient der Auswahl der Datensätze. Um alle Datensätze zu erfassen ist start_post = 0 und end_post = 42637 zu setzen"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "601f6d65",
+   "id": "dfd099de",
    "metadata": {},
    "outputs": [],
    "source": [
     "# configuration\n",
     "n_tag_posts = 1000\n",
-    "n_answer_posts = 42637 #max 42636"
+    "n_answer_posts = 42637"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81bef371",
+   "metadata": {},
+   "source": [
+    "# Datensätze laden\n",
+    "Als nächstes müssen die Datensätze aus der exportierten CSV-Datei geladen werden."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0902d4f4",
+   "id": "f3d6f302",
    "metadata": {},
    "outputs": [
     {
@@ -64,19 +102,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "4f06882a",
+   "cell_type": "markdown",
+   "id": "d9a511b4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'join', 'hashmap', 'dictionary', 'matrix-storage', 'azure-sql-database', 'quadratic-programming', 'netflix', 'pca', 'hessian-matrix', 'indices', 'data-visualization', 'image-processing', 'encog', 'cors', 'amazon-web-services', 'gps', 'probability', 'contour', 'linear-regression', 'matlab', 'parameter-passing', 'euclidean-distance', 'pandas', 'alchemyapi', 'mathematical-optimization', 'sql-server', 'multinomial', 'cluster-analysis', 'dirichlet', 'mfcc', 'random', 'sampling', 'genetic-algorithm', 'freebase', 'self-organizing-maps', 'security', 'model', 'r', 'ubuntu-12.04', 'email-spam', 'perceptron', 'entity-framework', 'mahout-recommender', 'neural-network', 'matplotlib', 'hungarian-algorithm', 'vector', 'topic-maps', 'correlation', 'cloudera', 'hierarchical-clustering', 'xml', 'logging', 'definition', 'input', 'metrics', 'chess', 'detection', 'torch', 'stockquotes', 'data-manipulation', 'classification', 'pam', 'expectation-maximization', 'c++', 'artificial-intelligence', 'hadoop', 'porter-stemmer', 'macos', 'gpu', 'validation', 'tf-idf', 'cluster-computing', 'vb.net', 'single-sign-on', 'gnuplot', 'linux', 'function', 'multilabel-classification', 'similarity', 'intrusion-detection', 'id3', 'outliers', 'face-recognition', 'data-mining', 'cvx', 'matconvnet', 'overlapping', 'audio', 'python', 'solr', 'matrix-multiplication', 'vectorization', 'accord.net', 'vgg-net', 'autosuggest', 'data-analysis', 'api', 'probability-density', 'lda', 'archive', 'azureservicebus', 'cross-validation', 'stanford-nlp', 'naivebayes', 'black-box', 'scipy', 'dbn', 'mysql', 'libsvm', 'training-data', 'implementation', 'recommendation-engine', 'multithreading', 'scientific-computing', 'pmml', 'ensemble-learning', 'netcdf', 'text-analysis', 'java', 'bayesian-networks', 'conv-neural-network', 'integration', 'c#', 'vision', 'computer-science', 'categorical-data', 'spam-prevention', 'non-linear-regression', 'elki', 'mallet', 'gradient-descent', 'matlab-figure', 'calibration', 'deployment', 'logarithm', 'csv', 'haar-classifier', 'pos-tagger', 'auc', 'e-commerce', 'keyword-search', 'algorithmic-trading', 'topic-modeling', 'rfe', 'analysis', 'tagged-corpus', 'subsequence', 'notifications', 'sift', 'modeling', 'roc', 'datumbox', 'search', 'large-files', 'kernel-density', 'gradient', 'nearest-neighbor', 'information-theory', 'compression', 'dlib', 'object-detection', 'tokenize', 'python-3.x', 'tesseract', 'simplecv', 'node.js', 'matrix-inverse', 'treemodel', 'feature-detection', 'evaluation', 'excel', 'scikit-image', 'calculus', 'apache-flink', 'predictionio', 'pruning', 'numpy', 'webforms', 'rbm', 'decision-tree', 'pickle', 'microsoft-account', 'lstm', 'precision', 'cryptography', 'adaboost', 'feature-selection', 'optimization', 'azure-scheduler', 'regression', 'twitter', 'data-representation', 'scikits', 'sentiment-analysis', 'plot', 'apache-spark', 'supervised-learning', 'prolog', 'grouping', 'som', 'apache-spark-ml', 'algorithm', 'celery', 'measurement', 'apriori', 'r-caret', 'web-scraping', 'python-multiprocessing', 'mahout', 'parallel-processing', 'moses', 'compilation', 'mp3', 'optics-algorithm', 'statistics', 'nlp', 'pattern-recognition', 'machine-translation', 'opencv', 'etl', 'reduction', 'feedparser', 'sqlite', 'viola-jones', 'pattern-matching', 'normalization', 'data-structures', 'collaborative-filtering', 'emgucv', 'wordnet', 'arrays', 'projection', 'reinforcement-learning', 'scala', 'scikit-learn', 'theano', 'filesize', 'lucene', 'linguistics', 'document-classification', 'gbm', '7zip', 'smo', 'matrix', 'cuda', 'tm', 'time-series', 'gearman', 'backpropagation', 'predict', 'j48', 'azure-machine-learning-studio', 'database', 'gate', 'random-forest', 'resize', 'svm', 'bigdata', 'image-recognition', 'evolutionary-algorithm', 'vowpalwabbit', 'sorting', 'gensim', 'arff', 'precision-recall', 'sparse-matrix', 'missing-data', 'kernel', 'numpy-ndarray', 'openimaj', 'amazon-s3', 'convolution', 'ssas', 'biometrics', 'office365', 'text-classification', 'html', 'powerbi', 'regex', 'gridworld', 'interaction', 'ruby', 'sarsa', 'unsupervised-learning', 'linear-algebra', 'google-analytics-api', 'gaussian', 'io', 'pydot', 'nupic', 'one-hot-encoding', 'elasticsearch', 'julia', 'image', 'python-2.7', 'c4.5', 'pylearn', 'performance', 'data-science', 'dataset', 'fuzzy-search', 'mixture-model', 'joblib', 'snort', 'maven', 'lua', 'pybrain', 'computer-vision', 'anpr', 'cascade-classifier', 'json', 'apache-spark-mllib', 'azure', 'liblinear', 'reservoir-sampling', 'standardized', 'prediction', 'mapreduce', 'named-entity-recognition', 'word2vec', 'object-recognition', 'k-means', 'weka', 'javascript', 'google-analytics', 'spss-modeler', 'authentication', 'oauth', 'azure-virtual-machine', 'feature-extraction', 'pyspark', 'background-subtraction', 'orange', 'kaggle', 'textblob', 'confusion-matrix', 'distributed-computing', 'dbscan', 'pom.xml', 'differentiation', 'logistic-regression', 'overlap', 'grid-search', 'principal-components', 'deep-learning', 'q-learning', 'acl', 'r-package', 'signal-processing', 'opennlp', 'svmlight', 'summarization', 'speech-recognition', 'text-mining', 'information-retrieval', 'caffe', 'dataframe', 'ocr', 'quicksort', 'filesystems', 'genetic-programming', 'nltk', 'model-fitting', 'php', 'text', 'knn', 'math', 'tic-tac-toe', 'wikipedia', 'ranking', 'web-services', 'rpart', 'test-data', 'bayesian', 'glm', 'mex'}\n"
-     ]
-    }
-   ],
+   "source": [
+    "# Datenbereinigung\n",
+    "Im Folgendem werden die Tags der Posts bereinigt, damit diese keine spitzen Klammern enthalten. Außerdem wird der Tag \"machine-learning\" exkludiert, da dieser in jedem Post enthalten ist."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd70e548",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# drop all duplicates in posts\n",
     "df = pd.DataFrame(stack_posts[0:n_tag_posts])\n",
@@ -105,9 +144,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4113e73e",
+   "metadata": {},
+   "source": [
+    "# Datenanalyse\n",
+    "Die folgende Zelle bereinigt die Posts von HTML-Tags und analysiert die Posts anhand ihrer Wörter. Hierfür werden die drei Patterns technology_pattern1-3 verwendet. Anschließend werden die gefundenen Wörter in eine Liste gespeichert."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ba42addf",
+   "id": "f6b91569",
    "metadata": {},
    "outputs": [
     {
@@ -161,9 +209,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fddbcfdd",
+   "metadata": {},
+   "source": [
+    "Die Liste der Wörter wird in eine txt-Datei gespeichert."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7c2e5955",
+   "id": "6edb2dce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,9 +234,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "83c4d06d",
+   "metadata": {},
+   "source": [
+    "# Ähnlichkeitsberechnung\n",
+    "Die Ähnlichkeit der zuvor gefundenen Wörter und der Tags wird berechnet. Ist diese höher als 0,8, wird das zugehörige Wort bzw. das Lemma des Wortes in einem Counter gespeichert."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5d26f46e",
+   "id": "923e9bac",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "97dd735f",
+   "id": "b815cbf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,32 +306,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "48775459",
+   "cell_type": "markdown",
+   "id": "ea409001",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loaded csv data\n"
-     ]
-    }
-   ],
    "source": [
-    "# Load csv data\n",
-    "filepath = os.path.join(os.getcwd(), 'technology_lists/technology_list.csv')\n",
-    "\n",
-    "true_positive_technologies = pd.read_csv(filepath, sep = \";\")\n",
-    "\n",
-    "print(\"loaded csv data\")"
+    "# Visualisierung\n",
+    "In der nächsten Zelle werden die gefundenen Technologien in einem Balkendiagramm dargestellt."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3e6088b2",
+   "id": "513ce625",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7970f98",
+   "id": "37a43afe",
    "metadata": {},
    "outputs": [],
    "source": []
