changed visualization headers

--- a/RQ2.ipynb
+++ b/RQ2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "07951b10",
+   "id": "ab97b0be",
    "metadata": {},
    "source": [
     "# Forschungsfrage 2\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35fe540d",
+   "id": "be29c220",
    "metadata": {},
    "source": [
     "# Importieren der Module\n",
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "47df8105",
+   "id": "98f01f78",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1020d58",
+   "id": "b763b4ef",
    "metadata": {},
    "source": [
     "Die Konfiguration der unteren Zelle dient der Auswahl der Datensätze. Um alle Datensätze zu erfassen ist start_post = 0 und end_post = 42637 zu setzen"
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d1bf29e1",
+   "id": "5dc83aab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cb46c53",
+   "id": "349da40d",
    "metadata": {},
    "source": [
     "# Datensätze laden\n",
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9a8cc73b",
+   "id": "27bfc055",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aabe5542",
+   "id": "1e617641",
    "metadata": {},
    "source": [
     "# Hilfsfunktionen\n",
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6a7570b1",
+   "id": "8c818b23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14bfd1ad",
+   "id": "9977fe5d",
    "metadata": {},
    "source": [
     "Die nächste Zelle zeigt drei verschiedenen Möglichkeiten, wie der Tf-Idf-Vectorizer die relevanten Wörter auswählt.\n",
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d2fbf011",
+   "id": "9605da39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7b3caa5f",
+   "id": "6da8cbd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a23950df",
+   "id": "84501ccf",
    "metadata": {},
    "source": [
     "# Analyse der Datensätze\n",
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "87dd5aa8",
+   "id": "d58dfe5e",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a7c5f54",
+   "id": "5b156631",
    "metadata": {},
    "source": [
     "# Visualisierung\n",
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "390d9ccb",
+   "id": "3284ed05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,8 +324,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "6120df86",
+   "execution_count": 13,
+   "id": "5dd04e71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,8 +345,8 @@
     "    fig.patch.set_facecolor('#BCBBBB')\n",
     "    fig.patch.set_alpha(ax_alpha)\n",
     "\n",
-    "    \n",
-    "    plt.suptitle('Themenfrequenz: \\\"' + topic + '\\\"', fontsize=fontsize + 2)\n",
+    "    plt.rcParams[\"font.family\"] = 'Times New Roman'\n",
+    "    plt.suptitle('Themenfrequenz: \\\"' + topic_name + '\\\"', fontsize=fontsize + 2)\n",
     "    plt.xlabel('Quartale', fontsize=fontsize)\n",
     "    plt.ylabel('Häufigkeit', fontsize=fontsize)        \n",
     "    ax.patch.set_facecolor(face_color)\n",
@@ -370,8 +370,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "3ae1a1b4",
+   "execution_count": 14,
+   "id": "2820097c",
    "metadata": {},
    "outputs": [
     {
@@ -395,8 +395,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "99d15e29",
+   "execution_count": 15,
+   "id": "c35a8392",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "7a38b938",
+   "id": "c7c8ab05",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "b2fcd0c2",
+   "id": "546cd0df",
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "0fe5d8b5",
+   "id": "678a736e",
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "0065772a",
+   "id": "e9426bdb",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8e31708d",
+   "id": "312ae8a3",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "2ce01970",
+   "id": "4324ed44",
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "180340c9",
+   "id": "167947d3",
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "7585881e",
+   "id": "ed8cacc2",
    "metadata": {},
    "outputs": [
     {
